--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="red" > #F44336</color>
     <color name="black" > #000000</color>
     <color name="gray">#9E9E9E</color>
-    <color name="colorAccent">#2E7D32</color>
+    <color name="colorAccent">#4CAF50</color>
     <color name="fbcolor">#3B5998</color>
     <color name="amber">#FFC107</color>
 </resources>
