--- a/app/src/main/res/drawable/editttext_shape.xml
+++ b/app/src/main/res/drawable/editttext_shape.xml
@@ -4,8 +4,8 @@
         android:color="#FFFFFF" />
 
     <stroke
-        android:color="#000"
-        android:width="2dp"/>
+        android:color="#9E9E9E"
+        android:width="1dp"/>
     <corners
-        android:radius="90dp"/>
+        android:radius="20dp"/>
 </shape>
