--- a/app/src/main/res/layout/fragment_spending_setter.xml
+++ b/app/src/main/res/layout/fragment_spending_setter.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="15dp"
     android:orientation="vertical"
-    tools:context=".AddSpending">
+    tools:context=".SpendingOrEarningDataSetter">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -16,52 +15,27 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Title of Spending"/>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:paddingLeft="15dp"
-                android:id="@+id/titleOfSpendingEdit"
-                android:background="@drawable/editttext_shape"/>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_margin="5dp"
-        android:layout_height="0dp"
-        android:layout_weight="2.5">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:text="Select a Category of Spending"/>
 
             <Spinner
                 android:layout_marginRight="45dp"
                 android:layout_width="match_parent"
                 android:id="@+id/catagorySpinner"
-                android:layout_height="35dp" />
+                android:layout_height="0dp"
+                android:layout_weight="2" />
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="0"
                 android:layout_marginTop="5dp"
                 android:textColor="@color/blue"
                 android:id="@+id/newCatagoryCreatorText"
@@ -79,18 +53,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:text="Spending amount"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="0dp"
+                android:layout_weight="2"
                 android:paddingLeft="15dp"
                 android:inputType="number"
                 android:id="@+id/spendingAmountEdit"
@@ -108,18 +84,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="15dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:text="Additional Note"/>
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="35dp"
+                android:layout_height="0dp"
+                android:layout_weight="2"
                 android:paddingLeft="15dp"
                 android:id="@+id/additionalNoteEdit"
                 android:background="@drawable/editttext_shape"/>
@@ -136,47 +114,39 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:orientation="vertical">
-
+            android:layout_height="match_parent"
+            android:layout_margin="15dp">
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:textSize="18sp"
                 android:text="Select spending date"/>
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
+                android:layout_height="match_parent"
                 android:text="TODAY"
                 android:textSize="18sp"
                 android:id="@+id/spendingDateText"
                 android:layout_alignParentRight="true"
                 android:textColor="@color/blue"/>
-
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
-    <RelativeLayout
+    <Button
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.2">
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/circle_shape"
-            android:textColor="#FFFFFF"
-            android:text="Confirm"
-            android:id="@+id/confirmButton"
-            android:paddingLeft="25dp"
-            android:paddingRight="25dp"
-            android:layout_margin="5dp"
-            android:layout_centerHorizontal="true"/>
-
-    </RelativeLayout>
+        android:layout_weight="1"
+        android:background="@drawable/circle_shape"
+        android:textColor="#FFFFFF"
+        android:text="Confirm"
+        android:textSize="20sp"
+        android:id="@+id/confirmButton"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:layout_margin="5dp"
+        android:layout_centerHorizontal="true"/>
 
 </LinearLayout>
