--- a/app/src/main/res/layout/layout_transection_overview.xml
+++ b/app/src/main/res/layout/layout_transection_overview.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
 
     <LinearLayout
@@ -9,6 +10,7 @@
         android:orientation="horizontal"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
+        android:id="@+id/layoutOverview"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="10dp"
         android:layout_height="wrap_content">
@@ -29,8 +31,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:id="@+id/cicularIconText"
-                    android:background="@drawable/ic_expand_more_black_24dp"
-                    android:backgroundTint="#FFF"/>
+                    android:background="@drawable/ic_expand_more_black_24dp" />
             </RelativeLayout>
 
             <LinearLayout
