--- a/app/src/main/res/layout/fragment_earning_setter.xml
+++ b/app/src/main/res/layout/fragment_earning_setter.xml
@@ -112,6 +112,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="TODAY"
+                    android:freezesText="true"
                     android:textColor="@color/blue"
                     android:id="@+id/earningDateText"
                     android:textSize="20dp"
