--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#00C853" />
+        android:color="#4CAF50" />
 
     <stroke
-        android:color="#00C853"
+        android:color="#4CAF50"
         android:width="2dp"/>
     <corners
         android:radius="90dp"/>
