--- a/app/src/main/res/layout/activity_schedule_data_viewer.xml
+++ b/app/src/main/res/layout/activity_schedule_data_viewer.xml
@@ -7,15 +7,27 @@
     android:orientation="vertical"
     tools:context=".activity.ScheduleDataViewerActivity">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:textSize="18sp"
         android:background="@color/green"
-        android:gravity="center"
-        android:text="Data for auto repetition"
-        android:textColor="#FFF" />
+        android:padding="10dp"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/backButton"
+            android:background="@drawable/ic_back"
+            android:layout_centerVertical="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textSize="22sp"
+            android:text="Scheduled Data"
+            android:textColor="#FFF"
+            android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
