--- a/app/src/main/res/layout/layout_wallet_viewer.xml
+++ b/app/src/main/res/layout/layout_wallet_viewer.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
         android:id="@+id/layoutOverview"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="5dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:orientation="horizontal"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <RelativeLayout
                 android:layout_width="30dp"
                 android:layout_margin="5dp"
@@ -55,31 +53,16 @@
             </LinearLayout>
         </LinearLayout>
 
-        <RelativeLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_gravity="end">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/bal"
-                android:textSize="18sp"
-                android:text="BL = "/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$0"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/bal"
-                android:textSize="18sp"
-                android:id="@+id/currentBalance"
-                android:textColor="@color/green"
-                android:gravity="end"/>
-
-        </RelativeLayout>
+            android:layout_centerVertical="true"
+            android:text="$0"
+            android:layout_marginLeft="5dp"
+            android:textSize="18sp"
+            android:id="@+id/currentBalance"
+            android:textColor="@color/green"/>
 
     </RelativeLayout>
 
