--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="amber">#FFC107</color>
     <color name="tab_selected">#66BB6A</color>
     <color name="light_green">#00C853</color>
+    <color name="white">#FFFFFF</color>
 </resources>
